5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4326/executions/1643_2703.log
== SUBMITION (2019-04-09 23:04:01) 
-- CODE:
var=input("digite a idade")
idade= 18 > 0
if (idade > eleito):
	print(eleito)
else(idade < nao eleito):
	print(nao_eleito)
	


 
-- EXECUTION TIME:
0.136404
-- ERROR:
  File "/home/codebench/codes/1643/2703/main.py", line 5
    else(idade < nao eleito):
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 23:04:26) 
-- CODE:
var=input("digite a idade")
idade = 18 > 0
if (idade > eleito):
	print(eleito)
else(idade < nao eleito):
	print(nao_eleito)
	


 
-- ERROR:
File "XXXX", line 5
    else(idade < nao eleito):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 23:05:26) 
-- CODE:
var=input("digite a idade")
idade = 18 > 0
idade2 = 18 < 0
if (idade > eleito):
	print(eleito)
else(idade2 < nao eleito):
	print(nao_eleito)
	


 
-- ERROR:
File "XXXX", line 6
    else(idade2 < nao eleito):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 23:06:04) 
-- CODE:
var=input("digite a idade")
idade = 18 > 0
idade2 = 18 < 0
if (idade > eleito):
	print(eleito)
else (idade2 < nao_eleito):
	print(nao_eleito)
	


 
-- EXECUTION TIME:
0.120889
-- ERROR:
  File "/home/codebench/codes/1643/2703/main.py", line 6
    else (idade2 < nao_eleito):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 23:06:33) 
-- CODE:
var=input("digite a idade")
idade = 18 > 0
idade2 = 18 < 0
if (idade > eleito):
	print(eleito)
else (idade2 < nao_eleito):
	print(nao_eleito)
	


 
-- ERROR:
File "XXXX", line 6
    else (idade2 < nao_eleito):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 23:07:24) 
-- CODE:
var=input("digite a idade")
idade = 18 > 0
idade2 = 18 < 0
if (idade > eleitor):
	print(eleito)
else (idade2 < nao_eleitor):
	print(nao_eleitor)
	


 
-- EXECUTION TIME:
0.122596
-- ERROR:
  File "/home/codebench/codes/1643/2703/main.py", line 6
    else (idade2 < nao_eleitor):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 23:08:16) 
-- CODE:
var=input("digite a idade")
idade = 18 >= 0
idade2 = 18 < 0
if (idade > eleitor):
	print(eleito)
else (idade2 < nao_eleitor):
	print(nao_eleitor)
	


 
-- ERROR:
File "XXXX", line 6
    else (idade2 < nao_eleitor):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 23:12:48) 
-- CODE:
num=input("digite um numero")
if (num >=18):
	print(eleitor)
else(num < nao_eleitor)

 
-- EXECUTION TIME:
0.134754
-- ERROR:
  File "/home/codebench/codes/1643/2703/main.py", line 4
    else(num < nao_eleitor)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 23:12:51) 
-- CODE:
num=input("digite um numero")
if (num >=18):
	print(eleitor)
else(num < nao_eleitor)

 
-- ERROR:
File "XXXX", line 4
    else(num < nao_eleitor)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 23:14:10) 
-- CODE:
num=input("digite um numero")
if (num >=18):
	print(eleitor)
else(num < 18):
	print(nao_eleitor)

 
-- EXECUTION TIME:
0.203149
-- ERROR:
  File "/home/codebench/codes/1643/2703/main.py", line 4
    else(num < 18):
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 23:14:23) 
-- CODE:
num=input("digite um numero")
if (num >=18):
	print(eleitor)
else(num < 18):
	print(nao_eleitor)

 
-- ERROR:
File "XXXX", line 4
    else(num < 18):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 23:16:58) 
-- CODE:
num=input("digite um numero")
if (num >==18):
	print(eleitor)

 
-- ERROR:
File "XXXX", line 2
    if (num >==18):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 23:17:35) 
-- CODE:
num=int(input("digite um numero"))
if (num >==18):
	print(eleitor)

 
-- ERROR:
File "XXXX", line 2
    if (num >==18):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
